@@ -7,6 +7,7 @@ export(find_renviron_d)
 export(find_rprofile)
 export(find_rprofile_d)
 export(install)
+export(is_debug_on)
 export(renviron)
 export(renviron_d)
 export(restart)
