@@ -3,7 +3,10 @@ Package: startup
 
 Version: 0.9.0-9000 [2018-01-10]
 
- * ...
+NEW FEATURES:
+
+ * is_debug_on() returns true if the startup debug mode is on.  To control
+   the debug mode, see ?startup::startup.
  
 
 Version: 0.9.0 [2018-01-09]
